<resources>
    <string name="app_name">Varios_Controles</string>
    <string name="tvTitulo">Mi super Mascota</string>
    <string name="btnIngresar">Ingresar </string>
    <string name="ivLogo"></string>
    <string name="tvNombreMascota">Nombre Mascota</string>
    <string name="tvTipoMascota">Tipo: </string>
    <string name="rbPerro">Perro</string>
    <string name="rbGato">Gato</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="tvPago"></string>
    <string name="btnRegresar">Regresar</string>
</resources>