<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#550923"
    android:backgroundTint="#490707"
    tools:context=".NombreMascota" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="219dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heullaaa" />

    <TextView
        android:id="@+id/tvNombreMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tvNombreMascota"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo2" />

    <EditText
        android:id="@+id/etNombreM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="#00BCD4"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreMascota" />

    <TextView
        android:id="@+id/tvTipoMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tvTipoMascota"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreM" />

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/tvTitulo"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="394dp"
        android:layout_height="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipoMascota">

        <RadioButton
            android:id="@+id/rbPerro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPerro"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbGato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbGato"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="269dp"
        android:layout_height="52dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#F4F4F4"
        android:onClick="totalPago"
        android:text="@string/btnRegistrar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>